# legion-scaffold-decorator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
input/: unique_left_decorations.csv  unique_right_decorations.csv  unique_scaffolds.csv
requirements/: requirements-dev.txt  requirements.txt
src/: generate.py  generate_random.py
src/scaffold_decorator/: __init__.py  adaptive_sampler.py  decorator.py  generator.py
src/scaffold_decorator/utils/: __init__.py  io.py
test/: __init__.py
test/integration/: __init__.py  test_generate_integration.py
test/unit/: __init__.py  test_adaptive_sampler.py  test_decorator.py  test_generate.py
