[project]
name = "scaffold-decorator"
readme = "README.md"
requires-python = "==3.9.18"
version = "1.0.0"
description = "A library for generating molecules by combining scaffolds with decorations"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
generate = "generate:main"
generate-random = "generate_random:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements/requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements/requirements-dev.txt"] }}

[tool.mypy]
ignore_missing_imports = true
python_version = "3.9"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.bandit]
skips = ["B101","B301", "B403"]
